--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,17 +2,17 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Madison Kiewski
     - name: Date of Birth
-      value: 14th March 1879
+      value: March 21st, 2003
     - name: Languages
-      value: English, German
+      value: English
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
+    - title: Bachelor of Science
+      institution: Michigan State University
       year: 1905
       description:
         - Description 1.
