--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,39 +1,35 @@
-- title: General Information
+- title: General
   type: map
   contents:
     - name: Full Name
       value: Madison Kiewski
-    - name: Date of Birth
-      value: March 21st, 2003
-    - name: Languages
-      value: English
+    - name: Location
+      value: DeWitt, Michigan
+    - name: Email
+      value: kiewskim@msu.edu
+    - name: URL
+      value: kiewskim.github.io
 
 - title: Education
   type: time_table
   contents:
     - title: Bachelor of Science
       institution: Michigan State University
-      year: 1905
+      year: May 2021 - December 2025
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - Computer Science
+        - title: Game Design & Development Minor
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+            - Technical art
+            - 3D modeling
+            - UI design
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Manager
+      institution: Hungry Howies
+      year: March 2021
       description:
         - Description 1.
         - Description 2.
@@ -41,57 +37,33 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+    - title: Colorguard Instructor
+      institution: DeWitt High School Marching Band
+      year: May 2021 - November 2023
       description:
         - Description 1.
         - Description 2.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
-
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
-
-- title: Academic Interests
+- title: Extracurriculars
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Clubs
       items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+        - title: Spartasoft
+          contents:
+            - Game development club at MSU.
 
-- title: Other Interests
-  type: list
+- title: Skills
+  type: nested_list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - title: Programming languages
+      items:
+        - Python
+        - C#
+        - C++
+    - title: Software
+      items:
+        - Photoshop
+        - Substance Painter
+        - Illustrator
+        - Procreate
