--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -15,7 +15,8 @@
   contents:
     - title: Bachelor of Science
       institution: Michigan State University
-      year: May 2021 - Dec 2025
+      year: May 2021 - 
+      Dec 2025
       description:
         - Computer Science
         - title: Game Design & Development Minor
