--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -62,6 +62,8 @@
         - C++
     - title: Software
       items:
+        - Unity
+        - Unreal Engine
         - Photoshop
         - Substance Painter
         - Illustrator
