--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -7,7 +7,7 @@
       value: DeWitt, Michigan
     - name: Email
       value: kiewskim@msu.edu
-    - name: URL
+    - name: Website
       value: kiewskim.github.io
 
 - title: Education
