--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ rss_icon: false
 
 navbar_fixed: false
 footer_fixed: true
-search_enabled: true
+search_enabled: false
 socials_in_search: false
 
 # Dimensions
