--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -63,7 +63,8 @@
       items:
         - Unity
         - Unreal Engine
-        - Photoshop
-        - Substance Painter
-        - Illustrator
         - Procreate
+        - Photoshop
+        - Blender
+        - Illustrator
+        - Substance Painter
